{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 114,
  "lineage": "7c491fcf-2bb8-ab19-28f5-bfbce97e52c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "us-east-1-default-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324390468402:subnet/subnet-4aa58e16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-4aa58e16",
            "map_public_ip_on_launch": true,
            "owner_id": "324390468402",
            "vpc_id": "vpc-f062188a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "student_on_demand_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0795e993eb27953cf",
            "arn": "arn:aws:ec2:us-east-1:324390468402:instance/i-06a50950ce5d448a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06a50950ce5d448a1",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "project",
            "monitoring": false,
            "primary_network_interface_id": "eni-00168ba644f568863",
            "private_dns": "ip-172-31-38-228.ec2.internal",
            "private_ip": "172.31.38.228",
            "public_dns": "ec2-18-207-200-36.compute-1.amazonaws.com",
            "public_ip": "18.207.200.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00a94c70b5ec58174",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "emr_master",
              "emr_slave",
              "terraform-20191205154303685700000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4aa58e16",
            "tags": {
              "Name": "Cloud Computing Workspace Machine",
              "Project": "4.3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06087d20215bf4cd6",
              "sg-0b74501f5998cd877",
              "sg-0dc52d45e24e1a078"
            ]
          },
          "dependencies": [
            "aws_security_group.emr_master",
            "aws_security_group.emr_slave",
            "aws_security_group.student_ami_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324390468402:security-group/sg-0b74501f5998cd877",
            "description": "emr_master",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b74501f5998cd877",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "emr_master",
            "name_prefix": null,
            "owner_id": "324390468402",
            "revoke_rules_on_delete": true,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-f062188a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "emr_slave",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324390468402:security-group/sg-0dc52d45e24e1a078",
            "description": "emr_slave",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc52d45e24e1a078",
            "ingress": [],
            "name": "emr_slave",
            "name_prefix": null,
            "owner_id": "324390468402",
            "revoke_rules_on_delete": true,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-f062188a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "student_ami_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324390468402:security-group/sg-06087d20215bf4cd6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06087d20215bf4cd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20191205154303685700000001",
            "name_prefix": null,
            "owner_id": "324390468402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Cloud Computing Workspace"
            },
            "timeouts": null,
            "vpc_id": "vpc-f062188a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_traffic_from_master_to_slave",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2124465461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dc52d45e24e1a078",
            "self": false,
            "source_security_group_id": "sg-0b74501f5998cd877",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.emr_master",
            "aws_security_group.emr_slave"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_traffic_from_slave_to_master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3115382939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b74501f5998cd877",
            "self": false,
            "source_security_group_id": "sg-0dc52d45e24e1a078",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.emr_master",
            "aws_security_group.emr_slave"
          ]
        }
      ]
    }
  ]
}